Move media inspection skipping tests from TestMediaInspectionProcessor to TestMediaMetadataValidator.