@@ -1,4 +1,4 @@
- /******************************************************************************
+/******************************************************************************
  * NOTICE                                                                     *
  *                                                                            *
  * This software (or technical data) was produced for the U.S. Government     *
@@ -37,12 +37,14 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
+import java.util.Map;
+
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 import static org.mitre.mpf.test.TestUtil.nonBlank;
 import static org.mockito.Mockito.*;
 
- public class TestMediaMetadataValidator {
+public class TestMediaMetadataValidator {
 
     @InjectMocks
     private MediaMetadataValidator _mediaMetadataValidator;
@@ -56,66 +58,122 @@ import static org.mockito.Mockito.*;
         MockitoAnnotations.initMocks(this);
     }
 
+    @Test
+    public void testSkipAudioInspection() {
+        assertInspectionSkipped(Map.of(
+                "MIME_TYPE", "audio/wav",
+                "MEDIA_HASH", "SOME_HASH",
+                "DURATION", "10"));
+    }
+
+    @Test
+    public void testSkipGenericInspection() {
+        assertInspectionSkipped(Map.of(
+                "MIME_TYPE", "application/pdf",
+                "MEDIA_HASH", "SOME_HASH"));
+    }
+
+    @Test
+    public void testSkipImageInspection() {
+        assertInspectionSkipped(Map.of(
+                "MIME_TYPE", "image/jpeg",
+                "MEDIA_HASH", "SOME_HASH",
+                "FRAME_WIDTH", "10",
+                "FRAME_HEIGHT", "10",
+                "EXIF_ORIENTATION", "0",
+                "ROTATION", "0",
+                "HORIZONTAL_FLIP", "FALSE"));
+    }
+
+    @Test
+    public void testSkipVideoInspection() {
+        assertInspectionSkipped(Map.of(
+                "MIME_TYPE", "video/mp4",
+                "MEDIA_HASH", "SOME_HASH",
+                "FRAME_WIDTH", "10",
+                "FRAME_HEIGHT", "10",
+                "FRAME_COUNT", "90",
+                "FPS", "30",
+                "DURATION", "3",
+                "ROTATION", "0"));
+    }
+
+    @Test
+    public void testSkipInspectionWithMissingMetadata() {
+        assertInspectionNotSkipped(Map.of(
+                "MIME_TYPE", "video/mp4",
+                "MEDIA_HASH", "SOME_HASH",
+                "FRAME_WIDTH", "10",
+                "FRAME_HEIGHT", "10",
+                // missing FRAME_COUNT
+                "FPS", "30",
+                "DURATION", "3",
+                "ROTATION", "0"));
+    }
+
+    @Test
+    public void testSkipInspectionWithInvalidMetadata() {
+        assertInspectionNotSkipped(Map.of(
+                "MIME_TYPE", "video/mp4",
+                "MEDIA_HASH", "SOME_HASH",
+                "FRAME_WIDTH", "10",
+                "FRAME_HEIGHT", "10",
+                "FRAME_COUNT", "90",
+                "FPS", "0", // value should be non-zero
+                "DURATION", "3",
+                "ROTATION", "0"));
+    }
 
     @Test
     public void doesNotSkipInspectForHeicMedia() {
-        var providedMediaMetadata = ImmutableMap.of(
+        assertInspectionNotSkipped(Map.of(
                 "MIME_TYPE", "image/heic",
-                "MEDIA_HASH", "HASH",
+                "MEDIA_HASH", "SOME_HASH",
                 "FRAME_WIDTH", "10",
-                "FRAME_HEIGHT", "10");
-
-        var mockMedia = mock(Media.class);
-        when(mockMedia.getId())
-                .thenReturn(12L);
-        when(mockMedia.getProvidedMetadata())
-                .thenReturn(providedMediaMetadata);
-
-        assertFalse(_mediaMetadataValidator.skipInspection(34, mockMedia));
-        verifyWarningAdded(34, 12);
+                "FRAME_HEIGHT", "10"));
     }
-
 
     @Test
     public void doesNotSkipInspectForCrushedPng() {
         var providedMediaMetadata = ImmutableMap.of(
                 "MIME_TYPE", "image/png",
-                "MEDIA_HASH", "HASH",
+                "MEDIA_HASH", "SOME_HASH",
                 "FRAME_WIDTH", "10",
                 "FRAME_HEIGHT", "10");
 
-        var mockMedia = mock(Media.class);
-        when(mockMedia.getId())
-                .thenReturn(56L);
-        when(mockMedia.getLocalPath())
-                .thenReturn(TestUtil.findFilePath("/samples/pngdefry/lenna-crushed.png"));
-        when(mockMedia.getProvidedMetadata())
-                .thenReturn(providedMediaMetadata);
+        var mockMedia = createMockMedia(
+                56, "/samples/pngdefry/lenna-crushed.png", providedMediaMetadata);
 
         assertFalse(_mediaMetadataValidator.skipInspection(78, mockMedia));
         verifyWarningAdded(78, 56);
     }
 
-
     @Test
     public void skipsInspectForRegularPng() {
         var providedMediaMetadata = ImmutableMap.of(
                 "MIME_TYPE", "image/png",
-                "MEDIA_HASH", "HASH",
+                "MEDIA_HASH", "SOME_HASH",
                 "FRAME_WIDTH", "10",
                 "FRAME_HEIGHT", "10");
 
-        var mockMedia = mock(Media.class);
-        when(mockMedia.getId())
-                .thenReturn(123L);
-        when(mockMedia.getLocalPath())
-                .thenReturn(TestUtil.findFilePath("/samples/pngdefry/lenna-normal.png"));
-        when(mockMedia.getProvidedMetadata())
-                .thenReturn(providedMediaMetadata);
+        var mockMedia = createMockMedia(
+                34, "/samples/pngdefry/lenna-normal.png", providedMediaMetadata);
 
-        assertTrue(_mediaMetadataValidator.skipInspection(456, mockMedia));
-        verify(_mockInProgressJobs, never())
-                .addWarning(anyLong(), anyLong(), any(), any());
+        assertTrue(_mediaMetadataValidator.skipInspection(12, mockMedia));
+        verifyNoWarningAdded();
+    }
+
+
+    private void assertInspectionSkipped(Map<String, String> providedMetadata) {
+        var mockMedia = createMockMedia(321, providedMetadata);
+        assertTrue(_mediaMetadataValidator.skipInspection(123, mockMedia));
+        verifyNoWarningAdded();
+    }
+
+    private void assertInspectionNotSkipped(Map<String, String> providedMetadata) {
+        var mockMedia = createMockMedia(321, providedMetadata);
+        assertFalse(_mediaMetadataValidator.skipInspection(123, mockMedia));
+        verifyWarningAdded(123, 321);
     }
 
 
@@ -123,5 +181,32 @@ import static org.mockito.Mockito.*;
         verify(_mockInProgressJobs)
                 .addWarning(eq(jobId), eq(mediaId), eq(IssueCodes.MEDIA_INSPECTION),
                             nonBlank());
+    }
+
+    private void verifyNoWarningAdded() {
+        verify(_mockInProgressJobs, never())
+                .addWarning(anyLong(), anyLong(), any(), anyString());
+    }
+
+
+    private static Media createMockMedia(long mediaId, String mediaPath,
+                                         Map<String, String> providedMetadata) {
+        var mockMedia = mock(Media.class);
+        when(mockMedia.getId())
+                .thenReturn(mediaId);
+        when(mockMedia.getProvidedMetadata())
+                .thenReturn(ImmutableMap.copyOf(providedMetadata));
+
+        if (mediaPath != null) {
+            when(mockMedia.getLocalPath())
+                    .thenReturn(TestUtil.findFilePath(mediaPath));
+        }
+
+        return mockMedia;
+    }
+
+
+    private static Media createMockMedia(long mediaId, Map<String, String> providedMetadata) {
+        return createMockMedia(mediaId, null, providedMetadata);
     }
 }
